--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <!-- PAGE 4 -->
 <div class="page" id="page4">
   <h1>One Question 💍</h1>
-  <p>Will you stay with me? ❤️</p>
+  <p>Will you stay with me forever ? ❤️</p>
   <button id="yesBtn" onclick="yesClicked()">Yes</button>
   <button id="noBtn" onclick="noClicked()">No</button>
   <div id="finalMessage"></div>
